--- a/cmd/config.env
+++ b/cmd/config.env
@@ -3,3 +3,8 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=password
 DB_NAME=postgres
+
+DB_MAX_OPEN_CONNS=25
+DB_MAX_IDLE_CONNS=5
+DB_CONN_MAX_LIFETIME=3600
+DB_CONN_MAX_IDLE_TIME=1800
